[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet for democracy"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "pallet-evm"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "1.0.0-beta.1"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-io         = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
pallet-timestamp  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
darwinia-balances = { path = "../balances" , default-features = false}
primitive-types = { version = "0.7.0", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.4", default-features = false }
evm = { version = "0.17", default-features = false }
sha3 = { version = "0.8", default-features = false }
impl-trait-for-tuples = "0.1"
ripemd160 = { version = "0.9", default-features = false }

[features]
default = ["std"]

std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"pallet-timestamp/std",
	"darwinia-balances/std",
	"primitive-types/std",
	"rlp/std",
	"evm/std",
	"sha3/std",
	"ripemd160/std",
]
