[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "RPC traits of Ethereum."
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "dvm-rpc-core-primitives"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "1.2.2"

[dependencies]
# crates
codec               = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
ethereum            = { version = "0.5", default-features = false, features = ["with-codec"] }
ethereum-types      = "0.9.0"
jsonrpc-core        = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive      = "15.1.0"
jsonrpc-pubsub      = "15.1.0"
rustc-hex           = "2.1.0"
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
# substrate
sp-core       = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std    = [
    "codec/std",
    "ethereum/std"
]

substrate-std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
